# fnlint

./: Cargo.toml  README.md  fnlint.config.json
.github/workflows/: auto-labeling.yml
src/: main.rs
src/config/: mod.rs
src/linter/: mod.rs  visitor.rs
src/scan/: mod.rs  pattern.rs  scanner.rs
