[package]
name = "fnlint"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_yml = "0.0.11"
toml = "0.8.19"
regex = "1.10.6"
clap = { version = "4", features = ["derive"] }
walkdir = "2.5.0"
anyhow = "1.0.86"
glob = "0.3.1"
