[package]
name = "fnlint"
version = "0.1.0"
edition = "2021"
authors = ["Ethan Goh <7086cmd@gmail.com>"]
description = "A filename linter."
license = "MIT OR Apache-2.0"
repository = "https://github.com/7086cmd/fnlint"
keywords = ["linter", "filename", "ls-lint"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_yml = "0.0.12"
toml = "0.8.19"
regex = "1.10.6"
walkdir = "2.5.0"
anyhow = "1.0.86"
